fixed pagination mobile view

--- a/assets/style.css
+++ b/assets/style.css
@@ -688,6 +688,7 @@ article .meta p {
 .pagination {
   font-family:'Open Sans', sans-serif;
   text-align:center;
+  margin:10px auto;
 }
 
 .page-featured {
@@ -956,6 +957,12 @@ ul.commentlist {
   }
   #mobile-header ol li a {
     color: #574257;
+  }
+  .pagination {
+    font-size:24px;
+    font-size:2.4rem;
+    display:block;
+    margin:10px auto;
   }
   .headline {
     font-size:28px;
